# ecewo

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.bat  build.sh  cli.c  create.bat  create.sh  handlers.c  handlers.h  installer.sh  makefile  router.c  router.h  structs.h  utils.c  utils.h
.github/workflows/: ci.yml  release.yml
chttp/: main.c  router.c  router.h  server.c  server.h  utils.c  utils.h
chttp/lib/: params.c
cmake/: plugins.cmake  registry.cmake
config/: ecewo-config.h.in
core/: CMakeLists.txt
core/config/: compat.h  config.h.in
core/lib/: request.c  router.c  router.h
core/server/: server.c
core/utils/: cors.c  middleware.c  middleware.h
docs/: 01.getting-started.md  01.getting_started.md  02.defining-routes.md  02.defining_routes.md  03.request-handling.md  03.request_handling.md  04.response-handling.md  04.response_handling.md  05.middleware.md  06.memory-management.md  07.async_operations.md  07.workers.md  08.async-database.md  08.timer.md  09.configurations.md  09.file-operations.md  09.file_operations.md  10.plugins.md  10.static-file-serving.md  10.static_file_serving.md  11.timer.md  12.cookie.md  13.cookie.md  13.session.md  14.cors.md  14.session.md  15.helmet.md  16.testing.md  17.cluster.md  README.md
docs/examples/: async_postgres.md  authentication.md  cookie.md  cors.md  environment_variables.md  using_cbor.md  using_json.md  using_sqlite.md
ecewo/: CMakeLists.txt  ecewo.c  ecewo.h  methods.c  request.c  request.h  router.c  router.h  routes.c  routes.h  server.c  server.h
ecewo/config/: compat.h
ecewo/lib/: request.c  request.h  router.c  router.h  session.c  session.h
ecewo/server/: handler.c  handler.h  request.c  request.h  router.c  router.h  server.c  server.h
ecewo/server/lib/: dotenv.h
ecewo/server/lib/jansson/: CMakeLists.txt
ecewo/server/start/: ecewo.c  ecewo.h  server.c
ecewo/server/utils/: middleware.c  middleware.h  session.c  session.h
ecewo/utils/: async.c  cors.h  headers.c  middleware.c  middleware.h  params.c  params.h  query.c  query.h  request.h  session.c  session.h
include/: cors.h  ecewo.h  server.h
include/ecewo/: cluster.h  cookie.h  cors.h  fs.h  helmet.h  mock.h  postgres.h  session.h  static.h
plugins/: cookie.c  cookie.h  pq.c  pq.h  session.c  session.h
src/: CMakeLists.txt  arena-pool.c  arena.c  arena.h  body.c  body.h  db.c  db.h  ecewo.c  ecewo.h  handlers.c  handlers.h  http.c  http.h  log.h  main.c  middleware.c  middleware.h  request.c  request.h  response.c  route-register.c  route-trie.c  route-trie.h  router.c  router.h  routes.h  server.c  server.h  spawn.c  task.c  task.h
src/config/: compat.h
src/lib/: middleware.c  middleware.h  request.c  request.h  route_trie.c  route_trie.h  router.c  router.h
src/modules/: cluster.c  cookie.c  cors.c  fs.c  helmet.c  mock.c  postgres.c  session.c  static.c
src/server/: client.h  ecewo.c  ecewo.h  request.c  request.h  server.c  server.h
src/utils/: async.c  async.h  cookie.c  cookie.h  cors.c  cors.h  date-cache.c  logger.h  task.c  task.h  utils.h
tests/: CMakeLists.txt  ecewo-mock.c  ecewo-mock.h  mock.c  mock.h  mock_helpers.c  mock_helpers.h  performance_test.c  run_tests.sh  runner.c  test-async-middleware.c  test-basics.c  test-blocking.c  test-body.c  test-cluster.c  test-concurrent-request.c  test-context.c  test-fire-and-forget.c  test-handlers.h  test-headers.c  test-methods.c  test-middleware.c  test-params.c  test-query.c  test-redirect.c  test-request.c  test-response.c  test-root.c  test-task-parallel.c  test-task.c  test-worker.c  test.c  test_framework.h  test_main.c  tester.h  unit_tests.c
vendors/: arena.c  arena.h  dotenv.h
vendors/unity/: unity.c  unity.h  unity_internals.h
